# elephant-gun

./: .gitignore  LICENSE  README.md  elephant_gun.py  elephant_gun.yaml  pyproject.toml
elephant_gun/: __init__.py  cli.py  db.py  eg_scan.py
elephant_gun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
profiles/current/: schema.yaml
train/: train_st.py
