[project]
name = "elephant-gun"
version = "0.1.3"
description = "Elephant Gun ðŸ˜ðŸ”« - Hybrid SQL + semantic search CLI for Postgres (local-first)"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "sentence-transformers>=3.0.0,<4.0.0",
  "psycopg[binary]>=3.2.4,<4.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "pyyaml>=6.0.1,<7.0.0",
]

[project.scripts]
elephant-gun = "elephant_gun.cli:main"
egun = "elephant_gun.cli:main"

[tool.setuptools.packages.find]
include = ["elephant_gun*"]
exclude = ["train*"]
